[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmi-weather"
version = "1.3.1a1"
description = "FMI weather data fetcher"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Kimmo Huoman", email = "kipenroskaposti@gmail.com" },
]
dependencies = [
    "beautifulsoup4>=4.8.1",
    "python-dateutil>=2.8.0",
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/kipe/fmi"
Repository = "https://github.com/kipe/fmi"

[tool.setuptools.packages.find]
where = ["."]
include = ["fmi*"]

[tool.setuptools.package-data]
"fmi" = ["symbols/*.svg"]

[dependency-groups]
dev = [
    "flake8",
]
