[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fmi-weather"
dynamic = ["version"]
description = "FMI weather data fetcher"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Kimmo Huoman", email = "kipenroskaposti@gmail.com" },
]
dependencies = [
    "beautifulsoup4>=4.8.1",
    "python-dateutil>=2.8.0",
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/kipe/fmi"
Repository = "https://github.com/kipe/fmi"

[tool.setuptools.packages.find]
where = ["."]
include = ["fmi*"]

[tool.setuptools.package-data]
"fmi" = ["symbols/*.svg"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
